# vig

./: .gitignore  README.md  pyproject.toml  requirements.txt
.playwright-mcp/: page-2026-04-10T16-40-05-811Z.yml  page-2026-04-10T16-41-18-302Z.yml  page-2026-04-10T16-45-32-435Z.yml  page-2026-04-10T16-47-02-234Z.yml  page-2026-04-10T16-48-47-307Z.yml  page-2026-04-10T16-49-21-175Z.yml
vig/: __main__.py  config.py
vig/agents/: betfair_agent.py  odds_agent.py  scraper_agent.py  synthesis_agent.py  tipster_agent.py
vig/sources/: betfair.py  polymarket.py  reddit.py
vig/sports/: base.py  football.py
vig/ui/: dashboard.py
