[project]
name = "vig"
version = "0.1.0"
description = "Sports betting research and recommendation agent system"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-ai[mcp]>=0.0.50",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "praw>=7.7",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "mcp>=1.0",
]

[project.scripts]
vig = "vig.__main__:main"
